@@ -1,7 +1,7 @@
-/**
+/*
  * ShinyProxy
  *
- * Copyright (C) 2016-2024 Open Analytics
+ * Copyright (C) 2016-2025 Open Analytics
  *
  * ===========================================================================
  *
@@ -24,6 +24,7 @@ import eu.openanalytics.containerproxy.api.dto.ApiResponse;
 import eu.openanalytics.containerproxy.model.runtime.Container;
 import eu.openanalytics.containerproxy.model.runtime.ParameterNames;
 import eu.openanalytics.containerproxy.model.runtime.Proxy;
+import eu.openanalytics.containerproxy.model.runtime.runtimevalues.BackendContainerName;
 import eu.openanalytics.containerproxy.model.runtime.runtimevalues.BackendContainerNameKey;
 import eu.openanalytics.containerproxy.model.runtime.runtimevalues.ContainerImageKey;
 import eu.openanalytics.containerproxy.model.runtime.runtimevalues.HeartbeatTimeoutKey;
@@ -38,6 +39,8 @@ import io.swagger.v3.oas.annotations.media.ExampleObject;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import jakarta.servlet.http.HttpServletRequest;
+import org.apache.commons.io.FileUtils;
+import org.springframework.boot.info.BuildProperties;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -47,6 +50,8 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.ResponseBody;
 
 import javax.inject.Inject;
+import java.lang.management.ManagementFactory;
+import java.lang.management.RuntimeMXBean;
 import java.util.List;
 
 @Controller
@@ -55,10 +60,37 @@ public class AdminController extends BaseController {
     @Inject
     private ActiveProxiesService activeProxiesService;
 
+    @Inject
+    private BuildProperties buildProperties;
+
     @RequestMapping("/admin")
     private String admin(ModelMap map, HttpServletRequest request) {
         prepareMap(map, request);
         map.put("page", "admin");
+        map.put("subPage", "main");
+
+        return "admin";
+    }
+
+    @RequestMapping("/admin/about")
+    private String adminAbout(ModelMap map, HttpServletRequest request) {
+        prepareMap(map, request);
+        map.put("page", "admin");
+        map.put("subPage", "about");
+
+        RuntimeMXBean runtimeMxBean = ManagementFactory.getRuntimeMXBean();
+        List<String> arguments = runtimeMxBean.getInputArguments();
+
+        map.put("runtimeId", identifierService.runtimeId);
+        map.put("instanceId", identifierService.instanceId);
+        map.put("realmId", identifierService.realmId);
+        map.put("shinyProxyVersion", buildProperties.getVersion());
+        map.put("containerProxyVersion", buildProperties.get("containerProxyVersion"));
+        map.put("jvmVersion", runtimeMxBean.getVmName() + " (" + runtimeMxBean.getVmVendor() + ") " + Runtime.version().toString());
+        map.put("jvmArguments", String.join("\n", arguments));
+        map.put("heapSize", FileUtils.byteCountToDisplaySize(Runtime.getRuntime().totalMemory()));
+        map.put("heapFreeSize", FileUtils.byteCountToDisplaySize(Runtime.getRuntime().freeMemory()));
+        map.put("heapMaxSize", FileUtils.byteCountToDisplaySize(Runtime.getRuntime().maxMemory()));
 
         return "admin";
     }
@@ -139,7 +171,7 @@ public class AdminController extends BaseController {
             }
 
             if (!proxy.getContainers().isEmpty()) {
-                Container container = proxy.getContainers().get(0);
+                Container container = proxy.getContainers().getFirst();
                 String[] parts = container.getRuntimeValue(ContainerImageKey.inst).split(":");
                 imageName = parts[0];
                 if (parts.length > 1) {
@@ -147,7 +179,7 @@ public class AdminController extends BaseController {
                 } else {
                     imageTag = "N/A";
                 }
-                backendContainerName = container.getRuntimeObjectOrDefault(BackendContainerNameKey.inst, "N/A");
+                backendContainerName = container.getRuntimeObjectOrDefault(BackendContainerNameKey.inst, new BackendContainerName("N/A", "N/A")).getValue();
             } else {
                 imageName = "N/A";
                 imageTag = "N/A";
